--- a/css/style.css
+++ b/css/style.css
@@ -2,12 +2,15 @@
 
 body {
   font-family: "DM Sans", sans-serif;
-  margin: 0;
+  margin: 0 2rem;
 }
 
 a {
   text-decoration: none;
   transition: transform 0.3s;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 header {
   display: flex;
@@ -69,5 +72,11 @@ h3,
 h2,
 h4,
 p {
+  margin: 0;
+}
+.photograph-name {
+  color: #d3573c;
+  font-weight: 400;
+  font-size: 3.6rem;
   margin: 0;
 }
