add condition if i clicked on heart icon total heart increase and the overlay for the modal

--- a/css/style.css
+++ b/css/style.css
@@ -117,3 +117,31 @@ p {
   background-color: transparent;
   cursor: pointer;
 }
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2); /* Couleur de fond semi-transparente */
+  display: none; /* Caché au départ */
+  z-index: 1; /* Au-dessus de tout le contenu de la page */
+}
+footer {
+  display: flex;
+  justify-content: flex-end;
+}
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 50px;
+  background-color: #db8876;
+  width: 16rem;
+  padding: 2rem;
+  border-radius: 5px 5px 0 0;
+  font-size: 1.5rem;
+}
+footer p {
+  color: black !important;
+}
