--- a/css/style.css
+++ b/css/style.css
@@ -137,8 +137,8 @@ footer {
   justify-content: flex-end;
   gap: 50px;
   background-color: #db8876;
-  width: 16rem;
-  padding: 2rem;
+  width: 17rem;
+  padding: 1.5rem;
   border-radius: 5px 5px 0 0;
   font-size: 1.5rem;
 }
@@ -148,4 +148,71 @@ footer p {
 /* caroussel  */
 .modal-pic {
   display: none;
+  width: 70rem;
+  background-color: #fff;
+  z-index: 7;
+}
+.media {
+  width: 56rem;
+  height: 58rem;
+  object-fit: cover;
+  border-radius: 12px;
+}
+.modal-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.close {
+  display: flex;
+  justify-content: flex-end;
+  font-size: 3.2rem;
+  cursor: pointer;
+  margin-right: 0.8rem;
+  margin-top: 1rem;
+  color: #901c1c;
+  margin-bottom: 53rem;
+}
+
+.global-pic {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+}
+
+.chevron {
+  font-size: 3rem;
+  margin: 1rem;
+  color: #901c1c;
+}
+button {
+  border: none;
+  background: none;
+  cursor: pointer;
+  outline: none;
+  padding: 0;
+  margin: 0;
+}
+
+.modalpic-title {
+  margin-left: 5.3rem;
+  padding-top: 1.2rem;
+  color: #d3573c;
+  font-size: 2rem;
+}
+/* overlay for carousel */
+.overlay-pic {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(255, 255, 255);
+  display: none;
+  z-index: 2;
+}
+.photographer-card a:hover {
+  transition: transform 0.2s;
+  transform: scale(1.1);
 }
