--- a/css/photographer.css
+++ b/css/photographer.css
@@ -175,5 +175,15 @@ svg {
   cursor: pointer;
 }
 .modal-msg {
+  resize: none;
   height: 13rem;
+  width: 40rem;
+  border: none;
+  border-radius: 5px;
+}
+.modal-input {
+  font-size: 1.8rem;
+}
+.photograph-tagline {
+  font-size: 1.3rem;
 }
