--- a/css/style.css
+++ b/css/style.css
@@ -224,4 +224,36 @@ button {
     .contact_button {
         margin: 5rem;
     }
+    .photographer_section article h2 {
+        color: #d3573c;
+        font-size: 34px;
+        text-align: center;
+    }
+    .photographer-tagline {
+        text-align: center;
+    }
+}
+
+@media (max-width: 1060px) {
+    .photographer_section article h2 {
+        font-size: 32px;
+    }
+    .photograph-name {
+        font-size: 3rem;
+    }
+    .photograph-zone {
+        font-size: 1.5rem;
+    }
+    .photograph-tagline {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width: 1008px) {
+    .media-section {
+        justify-content: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
